--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,15 @@
         <module>BIO</module>
         <module>NIO</module>
         <module>AIO</module>
+        <module>Netty</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha2</version>
+        </dependency>
+    </dependencies>
 
 </project>
